# Distributed-Key-Value-Store

./: .gitignore  CMakeLists.txt
proto/: raft.proto
src/: kv_store.cpp  kv_store.h  raft_node.h
test/: kv_store_test.cpp
